--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,9 @@
     ],
     "require": {
         "php": ">=5.5.9",
-        "oxygen/core": "dev-master",
-        "oxygen/data": "dev-master",
-        "oxygen/preferences": "dev-master",
+        "oxygen/core": "~0.4.0",
+        "oxygen/data": "~0.5.0",
+        "oxygen/preferences": "~0.2.0",
         "illuminate/support": "~5.1.0"
     },
     "autoload": {
