--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,10 @@
     ],
     "require": {
         "php": ">=5.5.9",
+        "oxygen/auth": "~0.2.15",
         "oxygen/core": "~0.5.0",
-        "oxygen/data": "~0.7.0",
+        "oxygen/crud": "~0.4.0",
+        "oxygen/data": "~0.8.0",
         "oxygen/preferences": "~0.2.11",
         "illuminate/support": "~5.1.0"
     },
