--- a/composer.json
+++ b/composer.json
@@ -10,17 +10,17 @@
     "authors": [
         {
             "name": "Chris Chamberlain",
-            "email": "c.chamberlain@iinet.net.au"
+            "email": "chris@chamberlain.id.au"
         }
     ],
     "require": {
-        "php": ">=5.5.9",
-        "oxygen/auth": "~0.2.15",
-        "oxygen/core": "~0.5.0",
-        "oxygen/crud": "~0.4.0",
-        "oxygen/data": "~0.8.0",
-        "oxygen/preferences": "~0.2.11",
-        "illuminate/support": "~5.1.0"
+        "php": ">=7.2.0",
+        "oxygen/auth": "~0.3.0",
+        "oxygen/core": "~0.6.0",
+        "oxygen/crud": "~0.5.0",
+        "oxygen/data": "~0.9.0",
+        "oxygen/preferences": "~0.3",
+        "illuminate/support": "~6.0"
     },
     "autoload": {
         "psr-4": {
@@ -40,5 +40,8 @@
                 "description": "Authorisation & User Profile Interface"
             }
         ]
+    },
+    "require-dev": {
+        "phpstan/phpstan": "^0.12.18"
     }
 }
