--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,13 @@
     ],
     "require": {
         "php": ">=7.2.0",
-        "oxygen/auth": "~0.3.0",
-        "oxygen/core": "~0.6.0",
-        "oxygen/crud": "~0.5.0",
+        "oxygen/auth": "~0.4.0",
+        "oxygen/core": "~0.7.0",
+        "oxygen/crud": "~0.6.1",
         "oxygen/data": "~0.9.0",
         "oxygen/preferences": "~0.3",
-        "illuminate/support": "~6.0"
+        "illuminate/support": "~6.0",
+        "darkghosthunter/laraguard": "dev-master"
     },
     "autoload": {
         "psr-4": {
@@ -41,6 +42,12 @@
             }
         ]
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/oxygen-cms/laraguard-doctrine"
+        }
+    ],
     "require-dev": {
         "phpstan/phpstan": "^0.12.18"
     }
