--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,14 @@
     ],
     "require": {
         "php": ">=7.2.0",
-        "oxygen/auth": "~0.5.2",
-        "oxygen/core": "~0.8.0",
-        "oxygen/crud": "~0.7.0",
-        "oxygen/data": "~0.9.5",
-        "oxygen/preferences": "~0.3.5",
+        "oxygen/auth": "~0.5.4",
+        "oxygen/core": "~0.9.1",
+        "oxygen/crud": "~0.7.1",
+        "oxygen/data": "~0.9.8",
+        "oxygen/preferences": "~0.3.6",
         "illuminate/support": "~6.0",
-        "darkghosthunter/laraguard": "dev-master"
+        "darkghosthunter/laraguard": "dev-master",
+        "guzzlehttp/guzzle": "~6.5.5"
     },
     "autoload": {
         "psr-4": {
@@ -42,6 +43,11 @@
             }
         ]
     },
+    "config": {
+        "platform": {
+            "php": "7.2.15"
+        }
+    },
     "repositories": [
         {
             "type": "vcs",
@@ -49,6 +55,10 @@
         }
     ],
     "require-dev": {
-        "phpstan/phpstan": "^0.12.18"
+        "phpstan/phpstan": "^0.12.18",
+        "phpspec/phpspec": "^6.1"
+    },
+    "scripts": {
+        "test": "vendor/bin/phpspec run && vendor/bin/phpstan analyze src --level 1 --memory-limit 256M"
     }
 }
