code cleanup, added user impersonation, new preferences compat, login branding
switched back to Oxygen CMS branding instead of custom vendor logo, as imo looks cleaner and also gives Oxygen a bit of PR

also we no longer inject preferences into the layout. Instead legacy pages are provided with preferences
through the LegacyPage Vue component which also handles other integrations through an <iframe>

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "oxygen/preferences": "~0.3.7",
         "illuminate/support": "~6.0",
         "darkghosthunter/laraguard": "dev-master",
-        "guzzlehttp/guzzle": "~6.5.5"
+        "guzzlehttp/guzzle": "~6.5.5",
+        "lab404/laravel-impersonate": "dev-master"
     },
     "autoload": {
         "psr-4": {
