--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "illuminate/support": "~6.0",
         "darkghosthunter/laraguard": "dev-master",
         "guzzlehttp/guzzle": "~6.5.5",
-        "lab404/laravel-impersonate": "dev-master"
+        "lab404/laravel-impersonate": "~1.7.2"
     },
     "autoload": {
         "psr-4": {
